# servir-geoai-book

./: .gitignore  .nojekyll  _quarto.yml  index.html  index.md  pixi.toml  references.bib  references.html  search.json
01-Introduction/: index.ipynb  index.md  pyproject.toml
02-Data-Preparation/: index.html  index.ipynb  pyproject.toml
03_Semantic_Segmentation/01__Crop_Mapping/notebooks/: Rice_Mapping_Bhutan_2021.html
04_Object_Detection/: index.html  index.ipynb
05_Time_Series/: index.html
06_Eco_Process_Sim/: index.html
07_Transfer_Learning/: index.html
08_Fusion/: index.html
09_Downscaling/: index.html
10_Future/: index.html
11_Ethics/: index.html
12_Conclusions/: index.html
docs/: references.html  search.json
docs/02-Data-Preparation/: index.html
docs/05_Time_Series/: index.html
docs/07_Transfer_Learning/: index.html
docs/08_Fusion/: index.html
docs/10_Future/: index.html
site_libs/bootstrap/: bootstrap.min.css
